@@ -1,5 +1,6 @@
 18 May 2017: Wouter
 	- Fix #1265 to use /bin/kill.
+	- Fix #1267: Libunbound validator/val_secalgo.c uses obsolete APIs.
 
 17 May 2017: Wouter
 	- Fix #1265: contrib/unbound.service contains hardcoded path.
